--- a/app/views/magic/link/magic_link_mailer/send_magic_link.html.erb
+++ b/app/views/magic/link/magic_link_mailer/send_magic_link.html.erb
@@ -1,5 +1,5 @@
 <p>Hey there! Here is your sign in link (you can only use it once):</p>
 
-<p><%= link_to "Sign In", main_app.root_url(email: @email, sign_in_token: @token, path: @path, redirect_id: @redirect_id) %></p>
+<p><%= link_to "Sign In", main_app.root_url(email: @email, sign_in_token: @token) %></p>
 
 <p>Thanks!</p>
