--- a/app/views/magic/link/magic_links/new.html.erb
+++ b/app/views/magic/link/magic_links/new.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-6 offset-md-3">
-    <%= simple_form_for 'magic_link' do |f| %>
-      <%= f.input :email, label: "Enter your email", autofocus: true %>
+    <%= form_with url: magic_links_path, data: {remote: false} do |f| %>
+      <%= f.email_field :email, label: "Enter your email", autofocus: true %>
       <%= f.submit "Email me a sign in link", class: "btn btn-primary btn-block" %>
     <% end %>
     <br>
