--- a/app/views/magic/link/magic_link_mailer/send_magic_link.text.erb
+++ b/app/views/magic/link/magic_link_mailer/send_magic_link.text.erb
@@ -1,5 +1,9 @@
 Hey there! Here is your sign in link (you can only use it once):
 
-<%= main_app.root_url(email: @email, sign_in_token: @token) %>
+<% if @url.present? %>
+  <%= url_to @url, **parms.merge(email: @email, sign_in_token: @token) %>
+<% else %>
+  <%= main_app.root_url(email: @email, sign_in_token: @token) %>
+<% end %>
 
 Thanks!
