--- a/app/views/magic/link/magic_link_mailer/send_magic_link.html.erb
+++ b/app/views/magic/link/magic_link_mailer/send_magic_link.html.erb
@@ -1,5 +1,10 @@
-<p>Hey there! Here is your sign in link (you can only use it once):</p>
+<p>Hey there! Here is your sign in link:</p>
 
-<p><%= link_to "Sign In", main_app.root_url(email: @email, sign_in_token: @token) %></p>
+<% if @url.present? %>
+  <p><%= link_to @url, @url, **parms.merge(email: @email, sign_in_token: @token) %></p>
+<% else %>
+  <p><%= link_to "Sign In", main_app.root_url(email: @email, sign_in_token: @token) %></p>  
+<% end %>
+
 
 <p>Thanks!</p>
