--- a/app/views/magic/link/magic_link_mailer/send_magic_link.html.erb
+++ b/app/views/magic/link/magic_link_mailer/send_magic_link.html.erb
@@ -1,7 +1,7 @@
 <p>Hey there! Here is your sign in link:</p>
 
 <% if @url.present? %>
-  <p><%= link_to @url, @url, **parms.merge(email: @email, sign_in_token: @token) %></p>
+  <p><%= link_to @url, @url %></p>
 <% else %>
   <p><%= link_to "Sign In", main_app.root_url(email: @email, sign_in_token: @token) %></p>  
 <% end %>
